--- a/css/contact.css
+++ b/css/contact.css
@@ -79,4 +79,11 @@ li > a{
     color: white;
 }
 
+li > a:hover{
+    background-color: white;
+    color: black;
+    padding: 1rem;
+    border-radius: 999999px;
+}
+
 
