--- a/css/about.css
+++ b/css/about.css
@@ -29,7 +29,19 @@ h1{
 
 h5{
     text-align: center;
-    margin-left: 5rem;
-    margin-right: 5rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+
+li > a:hover{
+    background-color: white;
+    color: black;
+    padding: 1rem;
+    border-radius: 999999px;
+}
+
+.text{
+    color: white;
+    margin-top: 4rem;
 }
 
