--- a/css/home.css
+++ b/css/home.css
@@ -49,7 +49,12 @@ main{
     margin-left: 65rem;
 }
 
-
+li > a:hover{
+    background-color: white;
+    color: black;
+    padding: 1rem;
+    border-radius: 999999px;
+}
 
 
 
