--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -22,6 +22,9 @@ li > a{
     color: white;
 }
 
-.card {
-
+li > a:hover{
+    background-color: white;
+    color: black;
+    padding: 1rem;
+    border-radius: 999999px;
 }
