--- a/css/contact.css
+++ b/css/contact.css
@@ -34,6 +34,9 @@ li > a{
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,3);
+    z-index: -1;
+    display: flex;
+    flex-direction: column;
 }
 
 .wrapper .title h1{
@@ -80,10 +83,13 @@ li > a{
 }
 
 li > a:hover{
-    background-color: white;
-    color: black;
-    padding: 1rem;
-    border-radius: 999999px;
+    background-color: rgba(255, 255, 255, 0.614);
+   border-radius: 999999px;
+}
+
+li .nav-link{
+    transition: all 0.5s ease 0s;
+
 }
 
 
