--- a/css/contact.css
+++ b/css/contact.css
@@ -92,4 +92,16 @@ li .nav-link{
 
 }
 
+.home-page{
+    margin-top: 8rem;
+}
+
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 
