--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -67,3 +67,11 @@ li .nav-link{
         align-items: center;
     }
 }
+
+.home-page{
+    margin-top: 8rem;
+}
+
+footer{
+    margin-top: 15vh;
+}
