--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -75,3 +75,11 @@ li .nav-link{
 footer{
     margin-top: 15vh;
 }
+
+footer{
+    /* position: fixed; */
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
