--- a/css/education and experience.css
+++ b/css/education and experience.css
@@ -50,11 +50,12 @@ h3{
    padding-top: 18px;
 }
 
-.java{
+.html{
     justify-content: space-between;
     display: flex;
     align-content: center;
     padding-top: 5px;
+    height: ;
 }
 
 .java h3{
@@ -94,9 +95,28 @@ footer{
     margin-top: 15vh;
 }
 
-@media (max-width: 300px) {
+footer{
+    /* position: fixed; */
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+@media (min-width: 300px) and (max-width: 700px)  {
     .schoolpic{
         width: 100%;
+        flex-direction: column;
     }
+
+    .edu-imgs{
+        flex-direction: column;
+    }
+    
 }
+
+#purple-color{
+    background-color: #6f42c1;
+}
+
 
