--- a/css/projects.css
+++ b/css/projects.css
@@ -49,4 +49,16 @@ footer{
     margin-top: 15vh;
 }
 
-@media (min-width: 300px) and (max-width: 700px)
+footer{
+    /* position: fixed; */
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+@media (min-width: 300px) and (max-width: 700px) {
+    .card{
+        flex-direction: column;
+    }
+}
